# nextcloud-notes-rs

./: Cargo.toml  README.md
.github/workflows/: cd.yml
ci/: macos-install-packages  ubuntu-install-packages
src/: cliarguments.rs  configcreator.rs  configprovider.rs  httprequest.rs  lib.rs  main.rs  nextcloudclient.rs  utils.rs
