[package]
name = "nxcloud_notes_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
directories-next = "2.0.0"
toml = "0.5.8"
clap = "2.33.0"